--- a/219.md
+++ b/219.md
@@ -1,8 +1,12 @@
 # Go to available pages:
 
-[Main Page](https://ac-modding.com)
+[Main Page](index)
 
-[ACNH](ACNH.md)
+[Contact](contact)
+
+[Help](help)
+
+[ACNH](ACNH)
 
 [ACNH Emulation](ACNH/emulation)
 
@@ -12,8 +16,8 @@
 
 [ACNH Streaming](ACNH/streaming)
 
-[Contact](contact)
-
-[Help](help)
-
 [README](README)
+
+[Switch Guide](switch-guide)
+
+[Available Pages](219)
