moved things in '_pages' to 'pages'
im not sure whether or not github can understand the '_' 😭 so added a 'pages' to fix that

--- a/219.md
+++ b/219.md
@@ -20,6 +20,8 @@
 
 [Switch Guide](switch-guide)
 
-[SEALS](_pages/SEALS.md) (a test page, nothing useful there)
+[SEALS](pages/misc/SEALS) (a test page, nothing useful there)
+
+[sehsalps](pages/misc/sehsalps.txt)
 
 [Available Pages](219)
