Added title and description to every page
if you got rid of that ol yeeyee ass description you got you'd get some b****es on yo d**k

--- a/219.md
+++ b/219.md
@@ -1,3 +1,10 @@
+<html>
+ <head>
+  <meta name="description" content="A list of all available pages on AC-Modding.">
+  <title>AC-M Available Pages</title>
+</head> 
+</html>
+
 # Go to available pages:
 
 [Main Page](index)
