--- a/219.md
+++ b/219.md
@@ -31,4 +31,6 @@
 
 [sehsalps](pages/misc/sehsalps.txt)
 
+[Games with support for Video Capture](pages/gamesw-video-capture.md)
+
 [Available Pages](219)
