'Play activity not updating'
i just really wanna punch you right in the jaw
like just full out fist to your jaw

--- a/219.md
+++ b/219.md
@@ -33,4 +33,6 @@
 
 [Games with support for Video Capture](pages/gamesw-video-capture.md)
 
+[Play Activity not updating](pages/Play-Activity-not-updating)
+
 [Available Pages](219)
