--- a/219.md
+++ b/219.md
@@ -35,6 +35,6 @@
 
 [Play Activity not updating](pages/Play-Activity-not-updating)
 
-[FTPD](pages/FTPD.md)
+[FTPD](pages/FTPD)
 
 [Available Pages](219)
