--- a/219.md
+++ b/219.md
@@ -1,9 +1,7 @@
-<html>
- <head>
-  <meta name="description" content="A list of all available pages on AC-Modding.">
-  <title>AC-M Available Pages</title>
-</head> 
-</html>
+---
+title: 219
+description: A list of all available pages on ACM.
+---
 
 # Go to available pages:
 
@@ -21,7 +19,7 @@
 
 [ACNH NHSE](ACNH/NHSE)
 
-[SysDVR](ACNH/SysDVR)
+[SysDVR](SysDVR)
 
 [README](README)
 
