broken ftpd link 😭

--- a/219.md
+++ b/219.md
@@ -33,6 +33,6 @@ description: A list of all available pages on ACM.
 
 [Play Activity not updating](pages/Play-Activity-not-updating)
 
-[FTPD](pages/FTPD)
+[FTPD](FTPD)
 
 [Available Pages](219)
