what this site was made for 👍
finished modding pages!!

--- a/219.md
+++ b/219.md
@@ -11,19 +11,33 @@ description: A list of all available pages on ACM.
 
 [Help](help)
 
+[Switch Guide](switch-guide)
+
+[FTPD](FTPD)
+
 [ACNH](ACNH)
+
+[ACNH NHSE](ACNH/NHSE)
+
+[ACNH Poker](ACNH/Poker)
+
+[ACNH Mobile Spawner](ACNH/MS)
+
+[SysDVR](SysDVR)
 
 [ACNH Emulation](ACNH/emulation)
 
 [ACNH Mods](ACNH/mods)
 
-[ACNH NHSE](ACNH/NHSE)
+[ACNH Mods: Dialog Editing](ACNH/mods/dialog_editing)
 
-[SysDVR](SysDVR)
+[ACNH Mods: Editing Textures](ACNH/mods/editing_textures)
+
+[ACNH Mods: Model Swapping](ACNH/mods/model_swapping)
+
+[ACNH Mods: Music Mods](ACNH/mods/music_mods)
 
 [README](README)
-
-[Switch Guide](switch-guide)
 
 [SEALS](pages/misc/SEALS) (a test page, nothing useful there)
 
@@ -32,7 +46,5 @@ description: A list of all available pages on ACM.
 [Games with support for Video Capture](pages/gamesw-video-capture.md)
 
 [Play Activity not updating](pages/Play-Activity-not-updating)
-
-[FTPD](FTPD)
 
 [Available Pages](219)
