--- a/404.md
+++ b/404.md
@@ -11,7 +11,7 @@ idk what you typed in that search bar, but it cant be found.
 </p>
 
 <p align="center">
-<img src="../AC-Modding/assets/images/misc/olive_higgins.jpg">
+<img src="assets/images/misc/olive_higgins.jpg">
 </p>
 
 <p align="center">
@@ -19,5 +19,5 @@ idk what you typed in that search bar, but it cant be found.
 </p>
 
 <p align="center">
-<a href="https:/ac-modding.com">Or just go back to the main page?</a>
+<a href="https://ac-modding.com">Or just go back to the main page?</a>
 </p>
