im getting real tired

--- a/404.md
+++ b/404.md
@@ -11,7 +11,7 @@ idk what you typed in that search bar, but it cant be found.
 </p>
 
 <p align="center">
-<img src="assets/images/misc/olive_higgins.jpg">
+<img src="https://ac-modding.com/assets/images/misc/olive_higgins.jpg">
 </p>
 
 <p align="center">
