yeah i did that

--- a/404.md
+++ b/404.md
@@ -17,6 +17,10 @@ idk what you typed in that search bar, but it cant be found.
 </p>
 
 <p align="center">
+(if this wasn't your fault but mine, please [let me know](contact))
+</p>
+
+<p align="center">
 <a href="https://ac-modding.com/219">Look at an index of all available pages?</a>
 </p>
 
