--- a/219.md
+++ b/219.md
@@ -13,7 +13,11 @@ description: A list of all available pages on ACM.
 
 [Switch Guide](switch-guide)
 
+[Ban Risks](pages/ban-risks)
+
 [FTPD](FTPD)
+
+[SysDVR](SysDVR)
 
 [ACNH](ACNH)
 
@@ -22,8 +26,6 @@ description: A list of all available pages on ACM.
 [ACNH Poker](ACNH/Poker)
 
 [ACNH Mobile Spawner](ACNH/MS)
-
-[SysDVR](SysDVR)
 
 [ACNH Emulation](ACNH/emulation)
 
