--- a/404.md
+++ b/404.md
@@ -17,7 +17,7 @@ idk what you typed in that search bar, but it cant be found.
 </p>
 
 <p align="center">
-(if this wasn't your fault but mine, please [let me know](contact))
+(if this wasn't your fault but mine, please <a href="https://ac-modding.com/contact">let me know</a>)
 </p>
 
 <p align="center">
