update ban risks +219

--- a/219.md
+++ b/219.md
@@ -9,13 +9,15 @@ description: A list of all available pages on ACM.
 
 [Contact](contact)
 
+[Privacy](privacy)
+
 [Help](help)
 
 [Switch Guide](switch-guide)
 
-[Ban Risks](pages/ban-risks)
+[Ban Risks](pages/ban-risks) ([video available](https://www.youtube.com/watch?v=8Kc-TI1_Xxc))
 
-[FTPD](FTPD)
+[FTPD](FTPD) ([video available](https://www.youtube.com/watch?v=fm5VqstAKmw))
 
 [SysDVR](SysDVR)
 
@@ -29,7 +31,7 @@ description: A list of all available pages on ACM.
 
 [ACNH Emulation](ACNH/emulation)
 
-[ACNH Mods](ACNH/mods)
+[ACNH Mods](ACNH/mods) ([video available](https://www.youtube.com/watch?v=4SbMkAQmsI0))
 
 [ACNH Mods: Dialog Editing](ACNH/mods/dialog_editing)
 
