--- a/219.md
+++ b/219.md
@@ -19,6 +19,8 @@ description: A list of all available pages on ACM.
 
 [FTPD](FTPD) ([video available](https://www.youtube.com/watch?v=fm5VqstAKmw))
 
+[Input Display](pages/input-display)
+
 [SysDVR](SysDVR)
 
 [ACNH](ACNH)
@@ -47,7 +49,7 @@ description: A list of all available pages on ACM.
 
 [sehsalps](pages/misc/sehsalps.txt)
 
-[Games with support for Video Capture](pages/gamesw-video-capture.md)
+[Games with support for Video Capture](pages/gamesw-video-capture)
 
 [Play Activity not updating](pages/Play-Activity-not-updating)
 
