--- a/219.md
+++ b/219.md
@@ -19,7 +19,7 @@ description: A list of all available pages on ACM.
 
 [FTPD](FTPD) ([video available](https://www.youtube.com/watch?v=fm5VqstAKmw))
 
-[Input Display](pages/input-display)
+[Input Display](pages/input-display) ([video available](https://www.youtube.com/watch?v=QuOo9meqZ20))
 
 [SysDVR](SysDVR)
 
