let's go on a road trip
who wants taco cake!!?

- update 219
- update ACNH
- update emulation
+ update music mods
- update hekate_ipl.ini (removed emu)
+ update switch-guide
    + # console prep
    - fix html typo
    - fixed mageia typo
    - condensed required files
    - changed link of NXLoader to replace with Rekado

--- a/219.md
+++ b/219.md
@@ -21,7 +21,7 @@ description: A list of all available pages on ACM.
 
 [Input Display](pages/input-display) ([video available](https://www.youtube.com/watch?v=QuOo9meqZ20))
 
-[SysDVR](SysDVR)
+[SysDVR](SysDVR) ([video available](https://www.youtube.com/watch?v=SFBomLtRWMc))
 
 [ACNH](ACNH)
 
@@ -35,13 +35,13 @@ description: A list of all available pages on ACM.
 
 [ACNH Mods](ACNH/mods) ([video available](https://www.youtube.com/watch?v=4SbMkAQmsI0))
 
+[ACNH Mods: Music Mods](ACNH/mods/music_mods)
+
 [ACNH Mods: Dialog Editing](ACNH/mods/dialog_editing)
 
 [ACNH Mods: Editing Textures](ACNH/mods/editing_textures)
 
 [ACNH Mods: Model Swapping](ACNH/mods/model_swapping)
-
-[ACNH Mods: Music Mods](ACNH/mods/music_mods)
 
 [README](README)
 
