about damn time
music mods finished

--- a/219.md
+++ b/219.md
@@ -35,7 +35,7 @@ description: A list of all available pages on ACM.
 
 [ACNH Mods](ACNH/mods) ([video available](https://www.youtube.com/watch?v=4SbMkAQmsI0))
 
-[ACNH Mods: Music Mods](ACNH/mods/music_mods)
+[ACNH Mods: Music Mods](ACNH/mods/music_mods) ([video available](https://www.youtube.com/watch?v=ZDxOjlr1XsM))
 
 [ACNH Mods: Dialog Editing](ACNH/mods/dialog_editing)
 
