--- a/219.md
+++ b/219.md
@@ -47,6 +47,8 @@ description: A list of all available pages on ACM.
 
 [SEALS](pages/misc/SEALS) (a test page, nothing useful there)
 
+[slay](ACNH/mods/slay) (notes on stuff about bcsv/byml etc)
+
 [sehsalps](pages/misc/sehsalps.txt)
 
 [Games with support for Video Capture](pages/gamesw-video-capture)
