--- a/219.md
+++ b/219.md
@@ -37,9 +37,9 @@ description: A list of all available pages on ACM.
 
 [ACNH Mods: Music Mods](ACNH/mods/music_mods) ([video available](https://www.youtube.com/watch?v=ZDxOjlr1XsM))
 
-[ACNH Mods: Dialog Editing](ACNH/mods/dialog_editing)
+[ACNH Mods: Editing Textures](ACNH/mods/editing_textures) ([video available](https://www.youtube.com/watch?v=0RBe8-Wy_wk))
 
-[ACNH Mods: Editing Textures](ACNH/mods/editing_textures)
+[ACNH Mods: Dialog Editing](ACNH/mods/dialog_editing)
 
 [ACNH Mods: Model Swapping](ACNH/mods/model_swapping)
 
