--- a/219.md
+++ b/219.md
@@ -43,6 +43,14 @@ description: A list of all available pages on ACM.
 
 [ACNH Mods: Model Swapping](ACNH/mods/model_swapping)
 
+[ACNL](ACNL)
+
+[ACNL Save Editors](ACNL/SE)
+
+[ACNL Emulation](ACNL/emulation)
+
+[ACNL Streaming](ACNL/streaming)
+
 [README](README)
 
 [SEALS](pages/misc/SEALS) (a test page, nothing useful there)
