Fear is stored in the balls
added bcsv editing page (kinda)

--- a/219.md
+++ b/219.md
@@ -41,6 +41,8 @@ description: A list of all available pages on ACM.
 
 [ACNH Mods: Dialog Editing](ACNH/mods/dialog_editing)
 
+[ACNH Mods: BCSV Editing](ACNH/mods/bcsv_editing)
+
 [ACNH Mods: Model Swapping](ACNH/mods/model_swapping)
 
 [ACNH Mods: My Own Mods](ACNH/mods/iMods)
