--- a/219.md
+++ b/219.md
@@ -33,6 +33,8 @@ description: A list of all available pages on ACM.
 
 [ACNH Emulation](ACNH/emulation)
 
+[ACNH Villager Sort](ACNH/villager_sort)
+
 [ACNH Mods](ACNH/mods) ([video available](https://www.youtube.com/watch?v=4SbMkAQmsI0))
 
 [ACNH Mods: Music Mods](ACNH/mods/music_mods) ([video available](https://www.youtube.com/watch?v=ZDxOjlr1XsM))
