--- a/219.md
+++ b/219.md
@@ -33,7 +33,7 @@ description: A list of all available pages on ACM.
 
 [ACNH Emulation](ACNH/emulation)
 
-[ACNH Villager Sort](ACNH/villager_sort)
+[ACNH Villager Sort](ACNH/villager_search)
 
 [ACNH Mods](ACNH/mods) ([video available](https://www.youtube.com/watch?v=4SbMkAQmsI0))
 
