--- a/_posts/2022-10-11-SysDVR.md
+++ b/_posts/2022-10-11-SysDVR.md
@@ -43,7 +43,7 @@ Extract the contents of `SysDVR.zip` to your SD card. **You should NOT have a fo
 
 Now that you have SysDVR on your Switch, boot into CFW, open the Homebrew launcher, then open the SysDVR Settings app. By default, SysDVR will stream with Simple network mode. To switch, select either TCP bridge or USB, then select `Set current mode as default on boot`, so you don't have to open this app again every time you want to stream. Now select `Save and exit` to apply your changes. At this point, you're done with the switch, and can now move onto your computer.
 
-![SysDVR-Settings](../assets/images/hbrew/SysDVR-Settings.jpg)
+![SysDVR-Settings](../assets/images/hbrew/SysDVR-Settings.jpg){: .shadow .rounded-10}
 _SysDVR Settings_
 
 ## Setup
