before i make everything look prettier

--- a/_posts/2022-10-11-SysDVR.md
+++ b/_posts/2022-10-11-SysDVR.md
@@ -100,9 +100,7 @@ Using this mode is very simple. Make sure that you've selected TCP bridge from w
 
 Below is a picture of where to look for your Switch's IP address.
 
-<p align="center">
-  <img src="../assets/images/IPAddress.jpg"/>
-</p>
+![IPAddress](../assets/images/IPAddress.jpg){: .shadow .rounded-10}
 
 <video controls autoplay loop muted playsinline width="100%">
   <source src="../assets/video/misc/SysDVR-TCP.mp4" type="video/mp4">
