prettyify posts main
+ FTPD troubleshooting (proxy error)
~ Change ACNH Mods photo
~ Change Switch Guide
  + add guiformat

--- a/_posts/2022-06-21-ACNH.md
+++ b/_posts/2022-06-21-ACNH.md
@@ -6,34 +6,29 @@ categories: [Switch, ACNH]
 tags: [switch, homebrew, CFW, NHSE, ACNH]
 permalink: /ACNH/
 img_path: /
+pin: true
 ---
 
 # What would you like to look at?
 **Simply click on the hyperlink at the start of the section.**
 
-- [What would you like to look at?](#what-would-you-like-to-look-at)
-  - [Save Editing](#save-editing)
-  - [Streaming](#streaming)
-  - [Mods](#mods)
-  - [Emulating](#emulating)
-
 ## Save Editing
-<img align="left" src="./assets/images/NH/SE/NHSE.png" style="padding-right: 10px;">
-
+![NHSE](./assets/images/NH/SE/NHSE.png){: .shadow .rounded-10 .left width="256" }
 [`NHSE` (New Horizons: Save Editor) is what's used to save edit New Horizons.](/ACNH/NHSE) It allows you to change basically everything you could think of, from the amount of bells your character has, to even changing your island from a 1-star to a 3-star, when it's VERY obvious that you don't have that beautiful island to show it. You can also edit your map from the `Field Item Editor`, which is how people get beautiful treasure islands like this.
-<img align="center" src="./assets/images/NH/SE/FieldItemEditor.png" style="padding-top: 10px;"> 
-
-## Streaming
-
-[Learn how to stream Animal Crossing from your switch, **without** a capture card.](SysDVR) Streaming *with* a capture card does not require a hackable Swich. However, if you are able to use CFW, you can use SysDVR to stream games at a decent quality, and no need for a capture card. The picture below is use of SysDVR. If you plan to only stream AC, SysDVR is your best bet for something free. However SysDVR only allows you to stream games which allow capturing videos, so if you're playing a game that doesn't allow it, SysDVR won't work. [You can find your game here and see if it's compatible with SysDVR.](pages/gamesw-video-capture.md)
-<img src="./assets/images/NH/SysDVR.jpg" style="padding-top: 10px;"> 
+![FieldItemEditor](./assets/images/NH/SE/FieldItemEditor.png){: .shadow .rounded-10}
 
 ## Mods
 
 [Learn how to **get** or **make** mods, and then install them to your game.](/ACNH/mods) Note that not all mods are safe to use online, so when using mods, understand that there's always a chance you won't be able to go online with it (or even end up getting banned). The chances of being banned for using mods depend on what the mod does. The camera mod is an example of one you can use online, it simply unlocks the camera. But one that basically rebuilds the entire game probably wouldn't allow you to go online, or outright ban you. If you're curious about what mods you think could get you banned, dont be afraid to [join my discord and ask.](http://discord.ac-modding.com)
-<img src="./assets/images/NH/CameraMod.jpg" style="padding-top: 10px;"> 
+![CameraMod](./assets/images/NH/mods/gameMem/ModelResLoader_Object_Scale_Example.jpg){: .shadow .rounded-10}
+_credit to Jess from the acmods.org wiki for the pic!_
+
+## Streaming
+
+[Learn how to stream Animal Crossing from your switch, **without** a capture card.](SysDVR) Streaming *with* a capture card does not require a hackable Swich. However, if you are able to use CFW, you can use SysDVR to stream games at a decent quality, and no need for a capture card. The picture below is use of SysDVR. If you plan to only stream AC, SysDVR is your best bet for something free. However SysDVR only allows you to stream games which allow capturing videos, so if you're playing a game that doesn't allow it, SysDVR won't work. [You can find your game here and see if it's compatible with SysDVR.](pages/gamesw-video-capture.md)
+![SysDVR](./assets/images/NH/SysDVR.jpg){: .shadow .rounded-10}
 
 ## Emulating
 
 [Learn how to play Animal Crossing on your PC with either Yuzu or Ryujinx.](/ACNH/emulation) Emulating requires pretty decent hardware for the game to run at full speed, no lag. So if your Macbook Air from 2012 can't open Chrome without the thing dying, then you probably shouldn't even try. Emulating is also good if you want to use mods but don't want to put them on your Switch, because you're scared of being banned, or just want to test it out quickly without having to put it on there. It is a bit hard to set it up, but it's useful for what I've previously mentioned.
-<img src="./assets/images/NH/Yuzu.jpg" style="padding-top: 10px;"> 
+![Yuzu](./assets/images/NH/Yuzu.jpg){: .shadow .rounded-10}
