--- a/_posts/2022-10-11-SysDVR.md
+++ b/_posts/2022-10-11-SysDVR.md
@@ -2,8 +2,9 @@
 title: SysDVR
 date: 2022-10-11 22:08:00 -0400
 categories: [Switch, CFW]
-tags: [switch, sysdvr, homebrew, streaming, ACNH, CFW]
+tags: [switch, sysdvr, homebrew, streaming, CFW]
 permalink: /SysDVR/
+img_path: /
 ---
 
 Streaming your Switch to your computer is possible without needing any additional hardware, like a capture card. This is possible with a cross platform <sup><sub>(PC, Mac, Linux)</sub></sup> homebrew app called SysDVR, being developed by [exelix11](https://github.com/exelix11) The only thing you need is Custom Firmware, your common sense and your parents permission!
