--- a/_posts/pages/misc/2000-01-01-SEALS.md
+++ b/_posts/pages/misc/2000-01-01-SEALS.md
@@ -231,3 +231,7 @@ ACNH
 
 > Example line for prompt-danger.
 {: .prompt-danger }
+
+#### Video
+
+{% include embed/youtube.html id='fm5VqstAKmw' %}
